objects/SGR_URE_Multplv_Factors__c.object
<CustomObject>
    <fields>
        <fullName>ACA_Fees__c</fullName>
        <label>ACA Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Coverage_Code__c</fullName>
        <label>Coverage Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <label>Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M5__c</fullName>
        <label>M5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <label>Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Multplv Factor</relationshipLabel>
        <relationshipName>Multplv_Factor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prem_Tax__c</fullName>
        <label>Prem Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SGR_Plan_Age_Rate_Header__c</fullName>
        <label>Plan Age Rate Header</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGR_Plan_Id__c</fullName>
        <label>Plan Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Multplv Factor</label>
    <nameField>
        <label>Multplv_Factors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Multplv Factor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>